just one more commit

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,6 +4,9 @@
 
     <h2>{{dataValues.titulo}}</h2>
     <p>{{dataValues.conteudo}}</p>
+    <a href="/deletar/{{dataValues.id}}">
+        <button>Deletar</button>
+    </a>
     <hr>
 
 {{/each}}
