--- a/views/formulario.handlebars
+++ b/views/formulario.handlebars
@@ -1,7 +1,11 @@
 <form action="/add" method="POST">
     <p>Titulo</p>
-    <input type="text" name="titulo">
+    <input type="text" name="titulo" id="titulo" >
     <p>Conteudo: </p>
-    <textarea name="conteudo" ></textarea>
-    <button type="submit">Cadastrar postagem</button>
+    <textarea name="conteudo" id="textarea" ></textarea>
+    <button id="button" type="submit">Cadastrar postagem</button>
 </form>
+
+{{!-- {{#if titulo = ''}}
+    
+{{/if}} --}}
